WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
271024
[visionOS] Video fails to render after returning from LinearMediaPlayer fullscreen
https://bugs.webkit.org/show_bug.cgi?id=271024
Summary
[visionOS] Video fails to render after returning from LinearMediaPlayer fulls...
Andy Estes
Reported
2024-03-14 17:42:38 PDT
SSIA
Attachments
Add attachment
proposed patch, testcase, etc.
Andy Estes
Comment 1
2024-03-14 17:42:45 PDT
<
rdar://problem/123333859
>
Andy Estes
Comment 2
2024-03-14 17:48:42 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/25920
EWS
Comment 3
2024-03-15 11:48:32 PDT
Committed
276179@main
(2464f16d3d6d): <
https://commits.webkit.org/276179@main
> Reviewed commits have been landed. Closing PR #25920 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug