[visionOS] Video fails to render after returning from LinearMediaPlayer fullscreen https://bugs.webkit.org/show_bug.cgi?id=271024 rdar://123333859

Reviewed by Eric Carlson.

When returning from LinearMediaPlayer fullscreen we failed to clear the video receiver endpoint from
MediaPlayer, leaving it in a state where it was rendering to an endpoint that no longer existed. We
attempted to clear the endpoint in PlaybackSessionInterfaceLMK's implementation of
-linearMediaPlayer:didExitFullscreenWithError:, but it turns out this delegate method isn't called
when using `allowFullScreenFromInline`. Instead, clear the entpoint in -linearMediaPlayerToggleInlineMode:.

With this bug fixed, there is a second issue where the inline controls do not appear. This ended up
being a side effect of setting VideoPresentationInterface's captionsLayer on the LinearMediaPlayer.
Since there is still outstanding work for supporting captions (see rdar://124223292), for now just
pass an empty layer to LinearMediaPlayer.

* Source/WebKit/Platform/ios/PlaybackSessionInterfaceLMK.mm:
(-[WKLinearMediaPlayerDelegate linearMediaPlayerToggleInlineMode:]):
(-[WKLinearMediaPlayerDelegate linearMediaPlayer:didExitFullscreenWithError:]): Deleted.
* Source/WebKit/Platform/ios/VideoPresentationInterfaceLMK.mm:
(WebKit::VideoPresentationInterfaceLMK::setupPlayerViewController):

Canonical link: https://commits.webkit.org/276179@main